k8s/infrastructure/configs/envoy-gateway-system/gateway-class.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  namespace: envoy-gateway-system
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: ipv6-proxy
    namespace: envoy-gateway-system
  provider:
    type: Kubernetes
    kubernetes:
      envoyService:
        type: NodePort
        allocateLoadBalancerNodePorts: false
        patch:
          type: StrategicMerge
          value:
            spec:
              ports:
                - name: http-80
                  port: 80
                  nodePort: 32579
                - name: https-443
                  port: 443
                  nodePort: 31258
